# dissertation-recursive

./: .gitignore  README.md  proposal.md  proposal_tight.md  requirements.txt
configs/: final_clarification_matrix.yaml  (+2 more)
minimal-epilepsy-extraction/: .env.example  README.md  pyproject.toml
minimal-epilepsy-extraction/configs/: h008_qwen35_4b.yaml  h013_gpt55.yaml
minimal-epilepsy-extraction/data/: dataset_manifest.json
minimal-epilepsy-extraction/expected_results/: h008_qwen35_4b_guarded_n50_summary.json  h013_gpt55_n50_summary.json
minimal-epilepsy-extraction/prompts/: README.md  h008_guarded_contract.txt  h013_production_contract.txt
minimal-epilepsy-extraction/scripts/: generate_adjudication_worksheet.py  run_broader_field_experiment.py  run_h008_guarded.py  run_h013_gpt55.py
minimal-epilepsy-extraction/tests/: test_broader_pipeline.py  test_mc3.py  test_metrics.py  test_production_pipeline.py  test_script_paths.py
minimal-epilepsy-retrieval-verified/: README.md  pyproject.toml
minimal-epilepsy-retrieval-verified/config/: model_registry.yaml
minimal-epilepsy-retrieval-verified/data/: selected_rows_n25.json
minimal-epilepsy-retrieval-verified/schemas/: final_extraction_v1.json
minimal-epilepsy-retrieval-verified/scripts/: auto_adjudicate.py  build_adjudication_sheet.py  run_experiment.py  run_harness.py  summarize_results.py
minimal-epilepsy-retrieval-verified/tests/: test_clines_epilepsy_modular.py  test_data.py  test_document.py  test_evaluation_mapping.py  test_providers.py  test_retrieval_field_extractors.py  test_schemas.py  test_tables.py
(+303 files in other folders)
