[project]
name = "minimal-epilepsy-extraction"
version = "0.1.0"
description = "Minimal reproducibility capsule for the leading h008 and h013 epilepsy extraction harnesses."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
